n-vm-macros/tests/compile_fail/async_fn.rs
// SPDX-License-Identifier: Apache-2.0
// Copyright Open Network Fabric Authors

#[n_vm::in_vm]
async fn async_fn() {}

fn main() {}